# morgana-playground

./: .gitignore  CMakeLists.txt  README.md  library.h  readme.md
docs/doxygen/: crypto3.doxyfile.in
docs/manual/: intermediate.md
libs/algebra/: CMakeLists.txt  README.md
libs/algebra/docs/: implementation.md
libs/algebra/example/: fields.cpp
libs/algebra/test/: curves.cpp  fields.cpp
libs/algebra/test/bench_test/: bench_fields.cpp
libs/block/test/: CMakeLists.txt  des.cpp  injector.cpp  kasumi.cpp  md5.cpp  rijndael.cpp
libs/blueprint/example/: CMakeLists.txt
libs/blueprint/example/plonk/: addition_component.cpp  addition_component.hpp
libs/blueprint/test/: test_plonk_component.hpp
libs/codec/: crypto3.codec.podspec.json
libs/containers/: CMakeLists.txt
libs/containers/test/: CMakeLists.txt
libs/containers/test/merkle/: merkle.cpp
libs/crypto3/: CMakeLists.txt
libs/crypto3/cmake/: config.cmake.in
libs/crypto3/docs/manual/: contributing.md  index.md  quickstart.md
libs/crypto3/libs/algebra/: crypto3.algebra.podspec.json
libs/crypto3/libs/algebra/docs/: introduction.md
libs/crypto3/libs/algebra/example/: CMakeLists.txt  random_element.cpp
libs/crypto3/libs/algebra/test/: CMakeLists.txt  fields_static.cpp  matrix.cpp  vector.cpp
libs/crypto3/libs/block/: README.md  crypto3.block.podspec.json
libs/crypto3/libs/block/test/: md4.cpp  pack.cpp
libs/crypto3/libs/codec/: CMakeLists.txt  README.md
libs/crypto3/libs/containers/: README.md
libs/crypto3/libs/functional/: CMakeLists.txt  README.md
libs/crypto3/libs/functional/docs/: concepts.md  implementation.md  index.md  introduction.md  usage.md
libs/crypto3/libs/functional/include/nil/crypto3/functional/ipe/: fh_multi_ipe.hpp
libs/crypto3/libs/hash/: CMakeLists.txt  README.md  crypto3.hash.podspec.json
libs/crypto3/libs/hash/docs/: implementation.md  introduction.md
libs/crypto3/libs/hash/test/: CMakeLists.txt  find_group_hash.cpp  h2c.cpp  keccak.cpp  ripemd.cpp  sha3.cpp  tiger.cpp  tmp_poseidon_constexpr_generation.cpp
libs/crypto3/libs/math/: crypto3.math.podspec.json
libs/crypto3/libs/modes/: README.md
libs/crypto3/libs/multiprecision/: CMakeLists.txt
libs/crypto3/libs/passhash/: crypto3.passhash.podspec.json
libs/crypto3/libs/pbkdf/: crypto3.pbkdf.podspec.json
libs/crypto3/libs/pkpad/: CMakeLists.txt  crypto3.pkpad.podspec.json
libs/crypto3/libs/pubkey/: CMakeLists.txt  README.md
libs/crypto3/libs/pubkey/docs/: concepts.md  implementation.md  introduction.md  usage.md
libs/crypto3/libs/pubkey/include/nil/crypto3/pubkey/: bls.hpp  elgamal.hpp  elgamal_verifiable.hpp  pubkey_value.hpp  secret_sharing_state.hpp
libs/crypto3/libs/pubkey/include/nil/crypto3/pubkey/accumulators/: aggregate_verify.hpp  aggregate_verify_single_msg.hpp  deal_share.hpp  deal_shares.hpp  pubkey.hpp  reconstruct.hpp  sign.hpp  verify.hpp  verify_share.hpp
libs/crypto3/libs/pubkey/include/nil/crypto3/pubkey/algorithm/: aggregate_verify_single_msg.hpp  encrypt.hpp  rerandomize.hpp  sign.hpp  verify.hpp
libs/crypto3/libs/pubkey/include/nil/crypto3/pubkey/keys/: public_key.hpp  public_secret_sss.hpp  public_share_sss.hpp  verification_key.hpp
libs/crypto3/libs/pubkey/include/nil/crypto3/pubkey/modes/: isomorphic.hpp
libs/crypto3/libs/pubkey/include/nil/crypto3/pubkey/operations/: aggregate_op.hpp  aggregate_verify_op.hpp  deal_share_op.hpp  deal_shares_op.hpp  decrypt_op.hpp  encrypt_op.hpp  verify_share_op.hpp
libs/crypto3/libs/pubkey/include/nil/crypto3/pubkey/secret_sharing/: basic_policy.hpp  feldman.hpp  weighted_basic_policy.hpp
libs/crypto3/libs/pubkey/test/: CMakeLists.txt  eddsa.cpp  elgamal_verifiable.cpp  schnorr.cpp
libs/crypto3/libs/stream/: crypto3.stream.podspec.json
libs/crypto3/libs/vdf/: CMakeLists.txt  README.md
libs/crypto3/libs/zk/: CMakeLists.txt  README.md
libs/functional/: README.md  crypto3.functional.podspec.json
libs/functional/docs/: manual.md
libs/functional/test/: CMakeLists.txt
libs/hash/: CMakeLists.txt
libs/hash/docs/: concepts.md
libs/hash/test/: blake2b.cpp  h2f.cpp  hash_to_curve.cpp  poseidon.cpp  sha.cpp  sha1.cpp  sha2.cpp  shake.cpp
libs/kdf/: README.md  crypto3.kdf.podspec.json
libs/kdf/docs/: introduction.md
libs/mac/: CMakeLists.txt  README.md  crypto3.mac.podspec.json
libs/mac/test/: CMakeLists.txt
libs/marshalling/core/: CMakeLists.txt  README.md
libs/marshalling/core/example/: CMakeLists.txt
libs/marshalling/multiprecision/: CMakeLists.txt  README.md
libs/marshalling/zk/example/: CMakeLists.txt  r1cs_gg_ppzksnark.cpp
libs/marshalling/zk/test/: eddsa.cpp  merkle_proof.cpp  plonk_gates.cpp
libs/math/: README.md
libs/math/docs/: introduction.md
libs/math/test/: evaluation_domain.cpp
libs/modes/: CMakeLists.txt
libs/multiprecision/example/: big_seventh.cpp  cpp_int_import_export.cpp  cpp_int_mul_timing.cpp  debug_adaptor_snips.cpp  hashing_examples.cpp  hypergeometric_luke_algorithms.cpp  logged_adaptor.cpp  mixed_integer_arithmetic.cpp  numeric_limits_snips.cpp  random_snips.cpp
libs/multiprecision/test/: constexpr_test_cpp_int_5.cpp  test_pow.cpp  test_sf_import_c99.cpp  test_sqrt.cpp
libs/passhash/docs/: concepts.md
libs/pkpad/: CMakeLists.txt
libs/pubkey/: CMakeLists.txt
libs/pubkey/example/: bls.cpp
libs/pubkey/test/: CMakeLists.txt  bls.cpp  ecdsa.cpp
libs/random/test/: CMakeLists.txt  chacha.cpp
libs/stream/: README.md
libs/stream/test/: CMakeLists.txt
libs/threshold/: README.md  crypto3.threshold.podspec.json
libs/threshold/test/: threshold.cpp
libs/vdf/: crypto3.vdf.podspec.json
libs/vdf/test/: CMakeLists.txt  chia.cpp
libs/witness/: CMakeLists.txt  README.md  crypto3.witness.podspec.json
libs/witness/docs/: concepts.md  introduction.md  manual.md  usage.md
libs/witness/test/: CMakeLists.txt  fhs24.cpp
libs/zk/: crypto3.zk.podspec.json
libs/zk/test/: CMakeLists.txt
libs/zk/test/bench_test/: lpc.cpp  pedersen.cpp
libs/zk/test/commitment/: kzg.cpp
src/: CMakeLists.txt  OtherFile.hpp  proof_transcript.hpp
test/: CMakeLists.txt  hash.cpp
(+412 files in other folders)
